# jun-multiply

./: .readthedocs.yml  .travis.yml  README.md  next_num.py  pyproject.toml  requirements.txt  setup.py  test_next_num.py
.github/workflows/: python-app.yml  release.yml  test.yml
docs/: conf.py  index.rst
docs/source/api/: multiplication.rst
jun_multiply/: __init__.py  multiplication.py
tests/: multiplication_tests.py
