[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jun-multiply"
version = "0.0.2"
dependencies = [
  "numpy",
]
dynamic = [
  "version"
]
authors = [
  { name="Jun Zhou", email="author@example.com" },
]
description = "A small example multiply package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Chouvic/jun-multiply"
Issues = "https://github.com/Chouvic/jun-multiply/issues"
Documentation = "https://readthedocs.org/projects/jun-multiply/"
